helm-charts/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - image: bitnami/kafka:latest
          name: kafka
          ports:
            - containerPort: 29092
