helm-charts/zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - image: bitnami/zookeeper:latest
          name: zookeeper
          ports:
            - containerPort: 2181
