helm-charts/kafka-services.yml
apiVersion: v1
kind: Service
metadata:
    name: kafka
spec:
  selector: 
    app: kafka
  type: ClusterIP
  ports:
  - name: http
    port: 9092
    targetPort: 9092
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
    name: zookeeper
spec:
  selector: 
    app: zookeeper
  type: ClusterIP
  ports:
  - name: http
    port: 2181
    targetPort: 2181
    protocol: TCP
