helm-charts/services.yml
apiVersion: v1
kind: Service
metadata:
    name: order-service
spec:
  selector: 
    app: order
  type: ClusterIP
  ports:
  - name: grpc
    port: 9091
    targetPort: 9091
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
    name: warehouse-service
spec:
  selector: 
    app: warehouse
  type: ClusterIP
  ports:
  - name: grpc
    port: 9092
    targetPort: 9092
    protocol: TCP
---
