helm-charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: pbasmanov.example.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /users(/|$)(.*)
            backend:
              service:
                name: user-service
                port:
                  number: 9093
          - pathType: ImplementationSpecific
            path: /products(/|$)(.*)
            backend:
              service:
                name: warehouse-service
                port:
                  number: 9092
          - pathType: ImplementationSpecific
            path: /orders(/|$)(.*)
            backend:
              service:
                name: order-service
                port:
                  number: 9091
